finsh About US page

--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -295,35 +295,53 @@
         <section class="section section--faq bg_cover">
             <div class="faq container">
                 <div class="faq__block">
-                    <div class="faq__name title_normal size_4x">FAQ</div>
-                    <div class="faq__title title_light-bold size_6x">Часто задаваемые вопросы</div>
+                    <div class="faq__name txt_al_center title_normal size_4x">FAQ</div>
+                    <div class="faq__title txt_al_center title_light-bold size_6x">Часто задаваемые вопросы</div>
                     <ul class="faq__lists">
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                         <li class="faq__list">
-                            @include('./include/components/accordion.html')
+                            @include('./include/components/accordion.html', {
+                            "btn-class":"bg_white"
+                            })
                         </li>
                     </ul>
                 </div>
