finish about university page

--- a/dev/pages/about_us.html
+++ b/dev/pages/about_us.html
@@ -71,12 +71,12 @@
                             </div>
                         </div>
 
-                        <div class="about-company__info__btn">
-                            @include('./include/ui/btn.html', {
-                            "button_text":"Подробнее",
-                            "classname":"btn--theme--white"
-                            })
-                        </div>
+<!--                        <div class="about-company__info__btn">-->
+<!--                            @include('./include/ui/btn.html', {-->
+<!--                            "button_text":"Подробнее",-->
+<!--                            "classname":"btn&#45;&#45;theme&#45;&#45;white"-->
+<!--                            })-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
