--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -142,6 +142,42 @@
                 </div>
             </div>
         </section>
+        <!-- Progress -->
+        <section class="progress_bar mb-5">
+            <div class="container">
+                <div class="progress_title text-center color_white p-0">
+                    <h2 class="color_white">Ищете подходящий университет?</h2>
+                    <h6 class="color_white">
+                        Мы поможем выбрать нужный вам университет, проверим и сравним
+                        возможности в разных ВУЗах, определим ваши сильные стороны и
+                        раскроем их в мотивационных письмах. Подберем для вас университет
+                        вашей мечты!
+                    </h6>
+                </div>
+        
+                <div class="wrap_bars mt-5">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="ldBar label-center" data-value="50" data-unit="+" data-preset="circle"
+                                data-pattern-size="64" style="width: 100%; height: 200px"></div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="ldBar label-center" data-value="20" data-preset="circle" data-pattern-size="100"
+                                style="width: 100%; height: 200px"></div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="ldBar label-center" data-value="60" data-preset="circle" data-pattern-size="64"
+                                style="width: 100%; height: 200px"></div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="ldBar label-center" data-value="50" data-preset="circle" data-pattern-size="64"
+                                style="width: 100%; height: 200px"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section section--popular-universities">
             <div class="popular-universities container">
                 <div class="carts">
