service page fixed

--- a/dev/pages/services.html
+++ b/dev/pages/services.html
@@ -29,11 +29,14 @@
                     <ul class="services__block services__lists">
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -49,11 +52,16 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">
+                                        Составим личную стратегию с датами и требованиями для каждой программы Дадим
+                                        инструкцию по документам: где получать и как правильно заполнить Уточним, какие
+                                        экзамены нужно сдавать и когда Раскроем ваши преимущества в мотивационном
+                                        письме, рекомендациях и резюме Будем общаться с вузом, лоббировать ваши интересы
+                                        и сообщать о продвижении по плану Заполним и отправим заявки на программу и
+                                        стипендию вуза Расскажем, как проходит интервью и как к нему подготовиться
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -69,11 +77,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -89,11 +100,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -109,11 +123,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -129,11 +146,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -149,11 +169,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -169,11 +192,14 @@
                         </li>
                         <li class="services__item services__list">
                             <div class="services__item__left">
-                                <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
-                                <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем о
-                                    ваших предпочтениях Определим
-                                    шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
-                                    Расскажем, что потребуется для поступления
+                                <div class="services__item__left__block">
+                                    <div class="services__title title_light-bold size_6x">Бесплатная консультация</div>
+                                    <div class="services__desc text_normal size_xx lh_5xx">Познакомимся с вами и узнаем
+                                        о
+                                        ваших предпочтениях Определим
+                                        шансы на поступление Предложим страны под ваш запрос, успеваемость и бюджет
+                                        Расскажем, что потребуется для поступления
+                                    </div>
                                 </div>
                             </div>
                             <div class="services__item__right">
@@ -187,6 +213,7 @@
                                 </div>
                             </div>
                         </li>
+
                     </ul>
                 </div>
             </div>
